# eagleeye

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  core.db  debug.sh  pyproject.toml  run.sh
.github/workflows/: release.yml
src/eagleeye/: charts.py  main.py  preprocessing.py  utils.py  widgets.py
tests/: test_preprocessing.py
